--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@ body {
     padding: 0px;
     background: #fff;
 }
+@media(max-width: 500px) {
+  table, table img {
+    width: 100%;
+  }
+}
 </style>
 </head>
 
@@ -24,7 +29,7 @@ body {
 <table width="800" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#fff" style="background: #ffffff;">
   <tbody>
     <tr>
-      <td align="left" valign="top"><img src="https://aclassnewsletter.netlify.app/img/A Class Overseas_Newsletter_March_2025-03.jpg" width="800" height="auto" alt="" style="display: block;"/></td>
+      <td align="left" valign="top"><img src="img/A Class Overseas_Newsletter_March_2025-03.jpg" width="800" height="auto" alt="" style="display: block;"/></td>
     </tr>
     
 
